package com.ale.crud.dao;

import com.ale.crud.bean.User;
import org.springframework.stereotype.Repository;

@Repository
public interface UserDAO extends BaseDAO<User>{

}
