@startuml

class BaseServiceImpl
interface BaseService
interface BaseDAO

BaseService <|.. BaseServiceImpl
class BaseServiceImpl{
    -BaseDAO baseDAO
}


interface BaseService {
+int saveOne(T t)
+int removeOne(Object obj)
+int updateOne(T t)
+T getOne(Object obj)
}
interface BaseDAO {
+int saveOne(T t)
+int removeOne(Object obj)
+int updateOne(T t)
+T getOne(Object obj)
}

class UserServiceImpl
interface UserService
interface UserDAO

UserService <|.. UserServiceImpl
BaseServiceImpl <|-- UserServiceImpl
BaseService <|--- UserService
BaseServiceImpl o-- BaseDAO
UserServiceImpl o-- UserDAO
class UserServiceImpl{
    -UserDAO userDAO
}
@enduml